Continuing to clean everything

--- a/latex/abstract.tex
+++ b/latex/abstract.tex
@@ -7,6 +7,6 @@ Although RBF-FD was first proposed nearly a decade ago, it is only now gaining a
 
 Many HPC systems around the world have made the transition to Graphics Processing Unit (GPU) accelerators as a solution for added parallelism and higher throughput. Some systems offer significantly more GPUs than CPUs. As the problem size, $N$, grows larger, it behooves us to work on parallel architectures, be it CPUs or GPUs. In addition to demonstrating the ability to scale to hundreds or thousands of compute nodes, this work introduces parallelization strategies that span RBF-FD across multi-GPU clusters. The stability and accuracy of the parallel implementations are tested in explicit and implicit modes to verify correctness.
     
-This work establishes RBF-FD as a contender in the arena of distributed HPC geophysics modeling. 
+This work establishes RBF-FD as a contender in the arena of distributed HPC numerical methods. 
     
 \end{abstract}
