--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-06 04:36:00 -0500 
+%% Created for Evan Bollig at 2013-08-09 03:30:19 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{BolligFlyerErlebacher2012,
+	Author = {Evan F. Bollig and Natasha Flyer and Gordon Erlebacher},
+	Date-Added = {2013-08-09 08:30:08 +0000},
+	Date-Modified = {2013-08-09 08:30:17 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.jcp.2012.06.030},
+	Issn = {0021-9991},
+	Journal = {Journal of Computational Physics},
+	Keywords = {OpenCL},
+	Number = {21},
+	Pages = {7133 - 7151},
+	Title = {Solution to \{PDEs\} using radial basis function finite-differences (RBF-FD) on multiple \{GPUs\}},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
+	Volume = {231},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.jcp.2012.06.030}}
 
 @misc{BolligSphereGrids,
 	Author = {E. F. Bollig},
@@ -179,22 +196,6 @@
 	Month = {November},
 	Title = {GPU technology key to exascale says Nvidia},
 	Year = {2011}}
-
-@article{BolligFlyerErlebacher2012,
-	Author = {Evan F. Bollig and Natasha Flyer and Gordon Erlebacher},
-	Date-Added = {2012-08-06 14:20:17 -0400},
-	Date-Modified = {2012-08-06 14:20:24 -0400},
-	Doi = {10.1016/j.jcp.2012.06.030},
-	Issn = {0021-9991},
-	Journal = {Journal of Computational Physics},
-	Keywords = {OpenCL},
-	Number = {0},
-	Pages = {-},
-	Title = {Solution to PDEs using radial basis function finite-differences (RBF-FD) on multiple GPUs},
-	Url = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
-	Year = {2012},
-	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.jcp.2012.06.030}}
 
 @inproceedings{Alliez2003,
 	Address = {Washington, DC, USA},
