--- a/latex/publications.tex
+++ b/latex/publications.tex
@@ -14,14 +14,14 @@
 
 
 \begin{itemize} 
-        \item \bibentry{bolligFlyerErlebacher2011}
-        \item \bibentry{bolligFlyerErlebacher2012}
+        \item \bibentry{BolligFlyerErlebacher2012}
+        \item \bibentry{BolligFlyerErlebacher2012b}
         \item \bibentry{BolligSIAMSEAS2012}     
         \item \bibentry{BolligXpo2012}
         \item \bibentry{BolligAGU2011}              
         \item \bibentry{BolligMA2011}
 \end{itemize}
-\authnote{add survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)}
+%TODO: add survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
 
 
 
