--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -326,7 +326,7 @@ Table~\ref{tbl:stencil_sets}, defines the collection of index lists that each CP
 \begin{center}
 \includegraphics[width=9cm]{rbffd_methods_content/decompositions/spy_metis_stencil_example_labels.png}
 %\includegraphics[width=0.45\textwidth]{rbffd_methods_content/decompositions/spy_metis_stencil_example_part_2_of_4.pdf}
-\caption{Spy of the sub-DM view on processor 2 of 4 from a METIS partitioning of $N=10,201$ nodes with stencil size $n=31$. Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setProvide$, and $\setDepend$. Stencils involved in MPI communications have been permuted to the bottom of the matrix.}
+\caption{Spy of the sub-DM view on processor 3 of 4 from a METIS partitioning of $N=4096$ nodes with stencil size $n=31$ and stencils generated with Algorithm~\ref{alg:hash_stencils} ($hnx=100$). Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setBoundary$, and $\setDepend$. $\setDepend$ Stencils involved in MPI communications have been permuted to the bottom of the matrix. The split in $\setDepend$ indicates communication with two neighboring partitions. }
 \label{fig:decomp_spy}
 \end{center}
 \end{figure}
